--- a/src/main/resources/templates/front/swift/views/listContentView.mustache
+++ b/src/main/resources/templates/front/swift/views/listContentView.mustache
@@ -31,13 +31,13 @@ struct {{entity}}ListContentView: View {
                                 } label: {
                                     Label("Edit", systemImage: "pencil")
                                 }
-
+{{^isChat}}
                                 Button {
                                     onDuplicate(item)
                                 } label: {
                                     Label("Duplicate", systemImage: "doc.on.doc")
                                 }
-
+{{/isChat}}
                                 Button(role: .destructive) {
                                     onDelete(item)
                                 } label: {
