--- a/src/main/resources/templates/infrastructure/security/securityConfig.mustache
+++ b/src/main/resources/templates/infrastructure/security/securityConfig.mustache
@@ -4,6 +4,7 @@ package {{package}};
 import {{.}};
 {{/imports}}
 
+import org.springframework.security.config.Customizer;
 import io.swagger.v3.oas.models.servers.Server;
 import com.nimbusds.jose.jwk.source.ImmutableSecret;
 import io.swagger.v3.oas.models.OpenAPI;
@@ -65,6 +66,7 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+        .cors(Customizer.withDefaults())
         .csrf(csrf -> csrf.disable())
         .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
         .authorizeHttpRequests(auth -> auth
