--- a/src/main/resources/templates/front/angular/model.mustache
+++ b/src/main/resources/templates/front/angular/model.mustache
@@ -1,4 +1,4 @@
-export type Type{{entity}} = 'IN' | 'OUT';
+export type Type{{entity}} = 'TYPE1' | 'TYPE2';
 
 export interface {{entity}} {
 {{#fields}}
